# airport/src/main/java/hu/webuni/airport/web/ImageController.java
@@ -1,0 +1,27 @@
+package hu.webuni.airport.web;
+
+import org.springframework.core.io.ByteArrayResource;
+import org.springframework.core.io.Resource;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
+
+import hu.webuni.airport.api.ImageControllerApi;
+import hu.webuni.airport.repository.ImageRepository;
+import lombok.RequiredArgsConstructor;
+
+@RestController
+@RequiredArgsConstructor
+public class ImageController implements ImageControllerApi {
+
+	private final ImageRepository imageRepository;
+
+	@Override
+	public ResponseEntity<Resource> downloadImage(Long id) {
+		return ResponseEntity.ok(
+				new ByteArrayResource(
+						imageRepository.findById(id).get().getData()
+						)
+				);
+	}
+	
+}
