# airport/src/main/openapi/airport-openapi.yml
@@ -242,6 +242,58 @@ paths:
       responses:
         '200':
           description: OK
+  '/api/airports/{id}/images':
+    parameters:
+      - schema:
+          type: integer
+          format: int64
+        name: id
+        in: path
+        required: true
+    post:
+      tags:
+        - airport-controller
+      summary: ''
+      operationId: uploadImageForAirport
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: string
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                fileName:
+                  type: string
+                content:
+                  type: string
+                  format: binary
+  '/api/images/{id}':
+    parameters:
+      - schema:
+          type: integer
+          format: int64
+        name: id
+        in: path
+        required: true
+    get:
+      summary: Your GET endpoint
+      tags:
+        - image-controller
+      responses:
+        '200':
+          description: OK
+          content:
+            image/jpeg:
+              schema:
+                type: string
+                format: binary
+      operationId: downloadImage
 components:
   schemas:
     AddressDto:
